# video_analytics

./: ..html  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  UCF101_plots.ipynb  UCF101_walkthrough.ipynb  environment.yml  feature_extractor.py  image_preprocessing.py  pyproject.toml  video_analytics.py  video_preprocessing.py
.github/workflows/: docs.yml  pages.yml  pylint  pylint.yml  pytest.yml  testing.yml
Demo/: Njord.ipynb  demo_helpers.py  toadstool.ipynb
E2Evideo/: __init__.py  conv_autoencoder.py  feature_extractor.py  plot_results.py  utils.py  video_analytics.py  video_preprocessing.py
docs/: E2Evideo.html  index.html  search.js  video_analysis.html
docs/E2Evideo/: conv_autoencoder.html  feature_extractor.html  image_preprocessing.html  plot_results.html  utils.html  video_analytics.html  video_preprocessing.html
docs/video_analysis/: __init__.html  conv_autoencoder.html  feature_extractor.html  index.html  (+5 more)
e2evideo/: App.py  __init__.py  _labels.py  action_recognition.py  cae_feature_extractor.py  conv_autoencoder.py  dinov2.py  e2e_app.py  e2epipline.sh  embedding_vis.py  feature_extractor.py  feature_extractor_new.py  frames_labels.txt  image_preprocessing.py  img2vec.py  load_ucf101.py  load_ucf11.py  nohup.out  obj_detection.py  our_utils.py  plot_results.py  utils.py  video_analytics.py  video_preprocessing.py  videomae.py
paper/: paper.md
tests/: conftest.py  test_feature_extractor.py  test_image_preprocessing.py  test_video_preprocessing.py
video_analysis/: conv_autoencoder.py  convnets.py  feature_extractor.py  feature_extractor_notebook.ipynb  gray_scale.ipynb  image_preprocessing.py  plot_results.py  requirements.txt  utils.py  video_preprocessing.py
(+21 files in other folders)
