[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "E2Evideo"
authors = [{name = "Faiga Alawad", email = "faiga@simula.no"}]
requires-python = ">=3.8"
dynamic = ["version", "description"]

dependencies = [
"numpy",
"scipy",
"pandas", 
"matplotlib",
"seaborn",
"tqdm",
"torch",
"torchvision",
"scikit-learn",
"opencv-python",
"scikit-image"
]