[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "e2evideo"
version = "0.1.0"
description = "A package for end-to-end video processing"
authors = ["Faiga Alawad <faiga@simula.no>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = ">=1.23.0"
scipy = ">=1.10.0"
pandas = ">=2.0.3"
matplotlib = ">=3.7.2"
seaborn = ">=0.12.2"
tqdm = ">=4.66.1"
torch = ">=1.13.1"
scikit-learn = ">=1.3.0"
opencv-python = ">=4.8.0.76"
pyarrow = ">=13.0.0"
scikit-image = ">=0.21.0"
tensorflow = ">=2.13.0"
